[package]
name = "super_derive"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["visit"] }
quote = "0.6"
proc-macro2 = "0.4"
proc_macro_roids = { path = "/mnt/data/work/github/azriel91/proc_macro_roids" }
